--- a/index.html
+++ b/index.html
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#dc3545">
-  <link rel="stylesheet" href="style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,900;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
-  <title>Visita Stambul</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="#dc3545">
+<link rel="stylesheet" href="style.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+rel="stylesheet"
+integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+crossorigin="anonymous">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,900;1,600;1,700;1,800;1,900&display=swap"
+rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"
+href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<title>Visita Stambul</title>
 </head>
 <body>
-  <div class="center">
-  <ul class="nav justify-content-end">
-    <li class="nav-item">
-      <a class="nav-link text-white" href="#">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link  text-white" data-bs-toggle="dropdown" href="#">Historia</a>
-      <ul class="dropdown-menu ">
-        <li><a class="dropdown-item" href="#">Introduccion</a></li>
-        <li><a class="dropdown-item" href="#">Arquitectura Galería</a></li>
-        <li><a class="dropdown-item" href="#">Imperio</a></li>
-      </ul>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link  text-white" data-bs-toggle="dropdown" href="#">Lugares</a>
-      <ul class="dropdown-menu ">
-        <li><a class="dropdown-item" href="#">Tren Rojo</a></li>
-        <li><a class="dropdown-item" href="#">Biblioteca</a></li>
-        <li><a class="dropdown-item" href="#">Mezquitas</a></li>
-      </ul>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link  text-white" data-bs-toggle="dropdown" href="#">Cultura</a>
-      <ul class="dropdown-menu ">
-        <li><a class="dropdown-item" href="#">Religión</a></li>
-        <li><a class="dropdown-item" href="#"> Gastronomía</a></li>
-        <li><a class="dropdown-item" href="#">Ceremonias</a></li>
-      </ul>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link  text-white" href="contacto.html">Contacto</a>
-    </li>
-  </ul>
+<div class="center">
+<nav class="navbar navbar-expand-md bg-danger navbar-dark">
+<a class="navbar-brand" href="#"><img src="img/logo.jpg"
+alt="Página de inicio"></a>
+<button class="navbar-toggler" type="button" data-toggle="collapse"
+data-target="#collapsibleNavbar">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="collapsibleNavbar">
+<ul class="navbar-nav">
+<li class="nav-item active">
+<a class="nav-link text-white" href="#">Home</a>
+</li>
+<li class="nav-item">
+<a class="nav-link text-white" data-bs-toggle="dropdown" href="#">Historia</a>
+<ul class="dropdown-menu ">
+<li><a class="dropdown-item" href="#">Introduccion</a></li>
+<li><a class="dropdown-item" href="#">Arquitectura Galería</a></li>
+<li><a class="dropdown-item" href="#">Imperio</a></li>
+</ul>
+</li>
+<li class="nav-item">
+<a class="nav-link text-white" data-bs-toggle="dropdown" href="#">Lugares</a>
+<ul class="dropdown-menu ">
+<li><a class="dropdown-item" href="#">Tren Rojo</a></li>
+<li><a class="dropdown-item" href="#">Biblioteca</a></li>
+<li><a class="dropdown-item" href="#">Mezquitas</a></li>
+</ul>
+</li>
+<li class="nav-item">
+<a class="nav-link text-white" data-bs-toggle="dropdown" href="#">Cultura</a>
+<ul class="dropdown-menu ">
+<li><a class="dropdown-item" href="#">Religión</a></li>
+<li><a class="dropdown-item" href="#"> Gastronomía</a></li>
+<li><a class="dropdown-item" href="#">Ceremonias</a></li>
+</ul>
+</li>
+<li class="nav-item">
+<a class="nav-link text-white" href="contacto.html">Contacto</a>
+</li>
+</ul>
+</div>
+</nav>
 
 <div>
   <img class="imagen-video "  src="img/principal.jpg" alt="">
@@ -143,7 +162,6 @@ entre el Mar Mediterráneo y el Mar Negro, a través del Mar de Mármara.
         </div>
       </div>
     </div>
-
   </div>
 </section>
 
